minor config change

--- a/examples/lqr/config_overrides/quadrotor_2D/lqr_c_quadrotor_2D_tracking.yaml
+++ b/examples/lqr/config_overrides/quadrotor_2D/lqr_c_quadrotor_2D_tracking.yaml
@@ -7,4 +7,4 @@ algo_config:
   # Model arguments
   # Note: Higher simulation frequency is required if using controller designed
   #       based on the continuous-time model
-  discrete_dynamics: True
+  discrete_dynamics: false
