--- a/benchmarking_sim/quadrotor/config_overrides/quadrotor_2D_attitude_tracking.yaml
+++ b/benchmarking_sim/quadrotor/config_overrides/quadrotor_2D_attitude_tracking.yaml
@@ -1,17 +1,14 @@
 task_config:
-  seed: 1337
   info_in_reset: True
   ctrl_freq: 60
-  pyb_freq: 600
-  gui: False
-  physics: pyb_attitude
-  # physics: pyb
+  pyb_freq: 1200
+  physics: dyn_si
   quad_type: 4
 
   init_state:
     init_x: 0
     init_x_dot: 0
-    init_z: 1.15
+    init_z: 1.0
     init_z_dot: 0
     init_theta: 0
     init_theta_dot: 0
@@ -21,44 +18,55 @@ task_config:
   init_state_randomization_info:
     init_x:
       distrib: 'uniform'
-      low: -0.01
-      high: 0.01
+      low: -0.05
+      high: 0.05
     init_x_dot:
       distrib: 'uniform'
-      low: -0.01
-      high: 0.01
+      low: -0.05
+      high: 0.05
     init_z:
       distrib: 'uniform'
-      low: -0.01
-      high: 0.01
+      low: -0.05
+      high: 0.05
     init_z_dot:
       distrib: 'uniform'
-      low: -0.01
-      high: 0.01
+      low: -0.05
+      high: 0.05
     init_theta:
       distrib: 'uniform'
-      low: -0.02
-      high: 0.02
-    # init_theta_dot:
-    #   distrib: 'uniform'
-    #   low: -0.02
-    #   high: 0.02
+      low: -0.05
+      high: 0.05
+    init_theta_dot:
+      distrib: 'uniform'
+      low: -0.05
+      high: 0.05
 
   task: traj_tracking
   task_info:
     trajectory_type: figure8
-    num_cycles: 1
+    num_cycles: 2
     trajectory_plane: 'xz'
-    trajectory_position_offset: [0, 1.2]
+    trajectory_position_offset: [0, 1.]
     trajectory_scale: 0.5
+
+  inertial_prop:
+    M: 0.027
+    Iyy: 1.4e-05
 
   episode_len_sec: 9
   cost: quadratic
-  done_on_out_of_bound: False
-  
 
   constraints:
     - constraint_form: default_constraint
-      constrained_variable: input
-    - constraint_form: default_constraint
       constrained_variable: state
+    - constraint_form: default_constraint
+      constrained_variable: input
+       upper_bounds: [0.47628, 0.4]
+       lower_bounds: [0.079, -0.4]
+
+  done_on_out_of_bound: True
+  done_on_violation: False
+  disturbances:
+    observation:
+      - disturbance_func: white_noise
+        std: [5.6e-05, 1.5e-02, 2.9e-05, 8.0e-03, 1.3e-03, 3.5e-03]
